# QCVM

./: .gitignore  CMakeLists.txt  COPYING  LICENSE  README.md  USAGE.md  build-all.sh  build-djgpp.sh  build-mingw.sh  build-watcom.sh  build.sh  clean.sh
.github/: FUNDING.yml
bindings/pascal/: qcvm.pas  test.pas
cmake/: i586-pc-msdosdjgpp.cmake  install.cmake  mingw-w64-x86_64.cmake  qcvm.pc.in  qcvmconf.h.in
contrib/: progs.hexpat  progs.ksy  qc.xml  qc.yaml  x-quakec.xml
eqcc/: README.md  eqcc.h  eqcc_compile.c  eqcc_main.c  eqcc_private.h  eqcc_utils.c  stb_c_lexer.h  test.qc  test.qcs  test2.src
examples/glexample/: main.c
examples/hello/: hello.c  hello.qc
examples/module_test/: module1.qc  module1.src  module2.qc  module2.src  module_test.c  shared.qc
examples/qcpong/: exports_qclib.qc  exports_qcpong.qc  main.c  main.qc  main.src  qclib.qc  qcpong.qc  qcpong.src  qcpong_keys.qc  stb_image_write.c
examples/qcvm_test/: main.c  test.qc  test.src
examples/qcvm_test_fte/: main.c  test2.qc  test2.src
examples/sieve/: sieve.c  sieve.qc
include/qcvm/: qcvm.h
new/: dosbox-x.conf  gnu.mk  makefile  makefile.wat  qc_test1.qc  qc_test3.qc  qc_test4.qc  qc_test7.qc  qc_test8.qc  qcvm.c  qcvm.h  qcvm_reckless.c  sieve.c  sieve.mk  test.c  watcom.mk
old/examples/module_test/: module2.qc  module2.src  shared.qc
old/examples/qcpong/: exports_qcpong.qc  qcpong.src
old/examples/qcvm_test/: test.qc  test.src
old/examples/qcvm_test_fte/: test2.qc
old/new/: dosbox-x.sh  qc_test2.qc  qc_test5.qc  qc_test6.qc  qc_test8.qc  qcvm.h  qcvm_reckless.c  sieve.c  sieve.mk  sieve.qc  watcom.mk
outdated/bindings/pascal/: qcvm.pas
outdated/eqcc/: eqcc_utils.c  test.qch  test2.qcs
outdated/examples/pascal/: pascal_test.pas
qc/: builtins.qc  extended.qc  main.qc  main.src  test.qc  testqc.qc  testqc.src
qclib/: qclib.c  qclib.h  qclib.qc
qcpkg/: main.c  qcpkg.c  qcpkg.h
qcvm/: qclib.c  qcvm.c  qcvm.h  qcvm_bootstrap.c  qcvm_entities.c  qcvm_exports.c  qcvm_fields.c  qcvm_functions.c  qcvm_globals.c  qcvm_opcodes.c  qcvm_opcodes.h  qcvm_parameters.c  qcvm_private.h  qcvm_qclib.c  qcvm_qclib.h  qcvm_return.c  qcvm_runtime.c  qcvm_utils.c
source/: libqcvm.c  libqcvm.h  qcvm.c  qcvm.h  test.c
test/: main.qc  main.src  progs.lno  test.c
tools/: progs.ksy
